pastebin/install/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: all-ingress
spec:
  tls:
  - hosts:
    - sharemytext.com
    - www.sharemytext.com
    secretName: sharemytext-tls-certs
  rules:
  - host: sharemytext.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pastebin-service
            port:
              number: 8000
  - host: www.sharemytext.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pastebin-service
            port:
              number: 8000
